--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <body>
 
-    <header class="container mx-auto">
+    <header class="container mx-auto lg:px-6">
 
         <nav>
 
@@ -146,7 +146,7 @@
     </header>
 
 
-    <main class="container mx-auto my-16">
+    <main class="container mx-auto my-16 lg:px-6">
 
        <!-- professional hockey -->
 
